@@ -1,38 +1,67 @@
-import java.util.Map;
+import com.google.common.annotations.VisibleForTesting;
+import com.google.common.collect.ImmutableMap;
 
-public class cqb extends bzl<cpv> {
+public class cqb extends bzn<cpx> {
+   private static final int c = 256;
+   private static final int d = 5;
+   private static final int e = 4;
+   private static final float f = 0.7F;
+   private static final int g = Math.round(15.0F);
+   private static final int h = Math.round(4.0F);
+   private static final int i = Math.round(10.0F);
+
+   @VisibleForTesting
    public cqb() {
-      super(Map.of(cgw.p, cgx.a, cgw.n, cgx.b, cgw.aV, cgx.b, cgw.aW, cgx.b));
+      super(ImmutableMap.of(cgy.p, cgz.a, cgy.aZ, cgz.b, cgy.aX, cgz.b, cgy.aY, cgz.b, cgy.aW, cgz.a, cgy.n, cgz.b, cgy.bb, cgz.b), g + 1 + h);
    }
 
-   protected boolean a(ars $$0, cpv $$1) {
-      return $$1.aH() && !$$1.bi() && $$1.at() == byg.a;
+   protected boolean a(aru $$0, cpx $$1) {
+      return $$1.at() != byi.a ? false : $$1.ec().c(cgy.p).map($$1x -> a($$1, $$1x)).map($$1x -> {
+         if (!$$1x) {
+            $$1.ec().b(cgy.aW);
+         }
+
+         return $$1x;
+      }).orElse(false);
    }
 
-   protected void a(ars $$0, cpv $$1, long $$2) {
-      bxu $$3 = $$1.ec().c(cgw.p).orElse(null);
-      if ($$3 != null) {
-         boolean $$4 = $$1.l($$3.dt());
-         ffq $$5 = null;
-         if ($$4) {
-            ffq $$6 = cin.a($$1, 5, 5, $$3.dt());
-            if ($$6 != null && cpx.a($$1, $$6) && $$3.h($$6.d, $$6.e, $$6.f) > $$3.g($$1)) {
-               $$5 = $$6;
-            }
-         }
+   protected boolean a(aru $$0, cpx $$1, long $$2) {
+      return $$1.ec().a(cgy.p) && $$1.ec().a(cgy.aW);
+   }
 
-         if ($$5 == null) {
-            $$5 = $$1.dY().h() ? cpx.a($$3, $$1.dY()) : a($$1, $$3);
-         }
+   protected void b(aru $$0, cpx $$1, long $$2) {
+      $$1.ec().c(cgy.p).ifPresent($$1x -> $$1.b(byi.q));
+      $$1.ec().a(cgy.aX, bay.a, (long)g);
+      $$1.a(awr.cG, 1.0F, 1.0F);
+   }
 
-         $$1.ec().a(cgw.n, new cgz(iv.a((jp)$$5), 0.6F, 1));
+   protected void c(aru $$0, cpx $$1, long $$2) {
+      if ($$1.at() == byi.q) {
+         $$1.b(byi.a);
+      }
+
+      $$1.ec().a(cgy.aZ, bay.a, (long)i);
+      $$1.ec().b(cgy.aW);
+   }
+
+   protected void d(aru $$0, cpx $$1, long $$2) {
+      byw<cpx> $$3 = $$1.ec();
+      bxw $$4 = $$3.c(cgy.p).orElse(null);
+      if ($$4 != null) {
+         $$1.a(ew.a.b, $$4.dt());
+         if (!$$3.c(cgy.aX).isPresent() && !$$3.c(cgy.aY).isPresent()) {
+            $$3.a(cgy.aY, bay.a, (long)h);
+            double $$5 = $$4.dA() - $$1.dA();
+            double $$6 = $$4.e($$4.bY() ? 0.8 : 0.3) - $$1.x();
+            double $$7 = $$4.dG() - $$1.dG();
+            csu.a(new ctm($$1, $$0), $$0, daa.k, $$5, $$6, $$7, 0.7F, (float)(5 - $$0.an().a() * 4));
+            $$1.a(awr.cJ, 1.5F, 1.0F);
+         }
       }
    }
 
-   private static ffq a(cpv $$0, bxu $$1) {
-      ffq $$2 = $$1.dt().d($$0.dt());
-      double $$3 = $$2.g() - azo.d($$0.dY().j(), 8.0, 4.0);
-      ffq $$4 = $$2.d().d($$3, $$3, $$3);
-      return $$0.dt().e($$4);
+   private static boolean a(cpx $$0, bxw $$1) {
+      double $$2 = $$0.dt().g($$1.dt());
+      return $$2 < 256.0;
    }
 }
