@@ -1,47 +1,53 @@
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Objects;
-import javax.annotation.Nullable;
+import com.mojang.brigadier.StringReader;
+import com.mojang.brigadier.arguments.ArgumentType;
+import com.mojang.brigadier.context.CommandContext;
+import com.mojang.brigadier.exceptions.CommandSyntaxException;
+import com.mojang.brigadier.exceptions.SimpleCommandExceptionType;
+import java.util.Arrays;
+import java.util.Collection;
 
-public record eq(List<eq.a> b) {
-   public static final eq a = new eq(List.of());
-   private static final int c = 8;
-   private static final int d = 16;
+public class eq implements ArgumentType<eq.a> {
+   private static final Collection<String> c = Arrays.asList("0", "~", "~-5");
+   public static final SimpleCommandExceptionType a = new SimpleCommandExceptionType(xc.c("argument.angle.incomplete"));
+   public static final SimpleCommandExceptionType b = new SimpleCommandExceptionType(xc.c("argument.angle.invalid"));
 
-   public eq(vw $$0) {
-      this($$0.a(vw.a(ArrayList::new, 8), eq.a::new));
+   public static eq a() {
+      return new eq();
    }
 
-   public void a(vw $$0) {
-      $$0.a(this.b, ($$0x, $$1) -> $$1.a($$0x));
+   public static float a(CommandContext<ek> $$0, String $$1) {
+      return ((eq.a)$$0.getArgument($$1, eq.a.class)).a((ek)$$0.getSource());
    }
 
-   public static eq a(xs<?> $$0, eq.b $$1) {
-      List<eq.a> $$2 = $$0.a().stream().map($$1x -> {
-         xm $$2x = $$1.sign($$1x.c());
-         return $$2x != null ? new eq.a($$1x.a(), $$2x) : null;
-      }).filter(Objects::nonNull).toList();
-      return new eq($$2);
-   }
-
-   public List<eq.a> a() {
-      return this.b;
-   }
-
-   public static record a(String a, xm b) {
-      public a(vw $$0) {
-         this($$0.d(16), xm.a($$0));
-      }
-
-      public void a(vw $$0) {
-         $$0.a(this.a, 16);
-         xm.a($$0, this.b);
+   public eq.a a(StringReader $$0) throws CommandSyntaxException {
+      if (!$$0.canRead()) {
+         throw a.createWithContext($$0);
+      } else {
+         boolean $$1 = gp.b($$0);
+         float $$2 = $$0.canRead() && $$0.peek() != ' ' ? $$0.readFloat() : 0.0F;
+         if (!Float.isNaN($$2) && !Float.isInfinite($$2)) {
+            return new eq.a($$2, $$1);
+         } else {
+            throw b.createWithContext($$0);
+         }
       }
    }
 
-   @FunctionalInterface
-   public interface b {
-      @Nullable
-      xm sign(String var1);
+   public Collection<String> getExamples() {
+      return c;
+   }
+
+   public static final class a {
+      private final float a;
+      private final boolean b;
+
+      a(float $$0, boolean $$1) {
+         this.a = $$0;
+         this.b = $$1;
+      }
+
+      public float a(ek $$0) {
+         return azq.h(this.b ? this.a + $$0.k().k : this.a);
+      }
    }
 }
