@@ -1,44 +1,47 @@
-import com.mojang.brigadier.StringReader;
-import com.mojang.brigadier.arguments.ArgumentType;
-import com.mojang.brigadier.context.CommandContext;
-import com.mojang.brigadier.exceptions.CommandSyntaxException;
-import com.mojang.brigadier.exceptions.DynamicCommandExceptionType;
-import com.mojang.brigadier.suggestion.Suggestions;
-import com.mojang.brigadier.suggestion.SuggestionsBuilder;
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.concurrent.CompletableFuture;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Objects;
+import javax.annotation.Nullable;
 
-public class er implements ArgumentType<o> {
-   private static final Collection<String> b = Arrays.asList("red", "green");
-   public static final DynamicCommandExceptionType a = new DynamicCommandExceptionType($$0 -> xa.b("argument.color.invalid", $$0));
+public record er(List<er.a> b) {
+   public static final er a = new er(List.of());
+   private static final int c = 8;
+   private static final int d = 16;
 
-   private er() {
+   public er(vy $$0) {
+      this($$0.a(vy.a(ArrayList::new, 8), er.a::new));
    }
 
-   public static er a() {
-      return new er();
+   public void a(vy $$0) {
+      $$0.a(this.b, ($$0x, $$1) -> $$1.a($$0x));
    }
 
-   public static o a(CommandContext<ej> $$0, String $$1) {
-      return (o)$$0.getArgument($$1, o.class);
+   public static er a(xu<?> $$0, er.b $$1) {
+      List<er.a> $$2 = $$0.a().stream().map($$1x -> {
+         xo $$2x = $$1.sign($$1x.c());
+         return $$2x != null ? new er.a($$1x.a(), $$2x) : null;
+      }).filter(Objects::nonNull).toList();
+      return new er($$2);
    }
 
-   public o a(StringReader $$0) throws CommandSyntaxException {
-      String $$1 = $$0.readUnquotedString();
-      o $$2 = o.b($$1);
-      if ($$2 != null && !$$2.d()) {
-         return $$2;
-      } else {
-         throw a.createWithContext($$0, $$1);
+   public List<er.a> a() {
+      return this.b;
+   }
+
+   public static record a(String a, xo b) {
+      public a(vy $$0) {
+         this($$0.d(16), xo.a($$0));
+      }
+
+      public void a(vy $$0) {
+         $$0.a(this.a, 16);
+         xo.a($$0, this.b);
       }
    }
 
-   public <S> CompletableFuture<Suggestions> listSuggestions(CommandContext<S> $$0, SuggestionsBuilder $$1) {
-      return eo.b(o.a(true, false), $$1);
-   }
-
-   public Collection<String> getExamples() {
-      return b;
+   @FunctionalInterface
+   public interface b {
+      @Nullable
+      xo sign(String var1);
    }
 }
