@@ -1,170 +1,109 @@
-import com.google.gson.JsonObject;
+import com.google.common.annotations.VisibleForTesting;
 import com.mojang.brigadier.StringReader;
 import com.mojang.brigadier.arguments.ArgumentType;
 import com.mojang.brigadier.context.CommandContext;
 import com.mojang.brigadier.exceptions.CommandSyntaxException;
-import com.mojang.brigadier.exceptions.Dynamic2CommandExceptionType;
-import com.mojang.brigadier.exceptions.Dynamic3CommandExceptionType;
-import com.mojang.brigadier.suggestion.Suggestions;
-import com.mojang.brigadier.suggestion.SuggestionsBuilder;
-import com.mojang.datafixers.util.Either;
-import java.util.Arrays;
+import com.mojang.brigadier.exceptions.DynamicCommandExceptionType;
+import com.mojang.brigadier.exceptions.SimpleCommandExceptionType;
+import com.mojang.serialization.Codec;
+import com.mojang.serialization.Dynamic;
+import com.mojang.serialization.DynamicOps;
+import com.mojang.serialization.JavaOps;
 import java.util.Collection;
-import java.util.Optional;
-import java.util.concurrent.CompletableFuture;
-import java.util.function.Predicate;
+import java.util.List;
+import javax.annotation.Nullable;
 
-public class fm<T> implements ArgumentType<fm.c<T>> {
-   private static final Collection<String> a = Arrays.asList("foo", "foo:bar", "012", "#skeletons", "#minecraft:skeletons");
-   private static final Dynamic2CommandExceptionType b = new Dynamic2CommandExceptionType(($$0, $$1) -> xa.b("argument.resource_tag.not_found", $$0, $$1));
-   private static final Dynamic3CommandExceptionType c = new Dynamic3CommandExceptionType(
-      ($$0, $$1, $$2) -> xa.b("argument.resource_tag.invalid_type", $$0, $$1, $$2)
-   );
-   private final jh<T> d;
-   final alh<? extends js<T>> e;
+public class fm<T> implements ArgumentType<jg<T>> {
+   private static final Collection<String> b = List.of("foo", "foo:bar", "012", "{}", "true");
+   public static final DynamicCommandExceptionType a = new DynamicCommandExceptionType($$0 -> xc.b("argument.resource_or_id.failed_to_parse", $$0));
+   private static final SimpleCommandExceptionType c = new SimpleCommandExceptionType(xc.c("argument.resource_or_id.invalid"));
+   private static final vb<Object> d = vb.a(JavaOps.INSTANCE);
+   private final ji.a e;
+   private final boolean f;
+   private final Codec<jg<T>> g;
 
-   public fm(ef $$0, alh<? extends js<T>> $$1) {
-      this.e = $$1;
-      this.d = $$0.e($$1);
+   protected fm(eg $$0, alj<jt<T>> $$1, Codec<jg<T>> $$2) {
+      this.e = $$0;
+      this.f = $$0.a($$1).isPresent();
+      this.g = $$2;
    }
 
-   public static <T> fm<T> a(ef $$0, alh<? extends js<T>> $$1) {
-      return new fm<>($$0, $$1);
+   public static fm.c a(eg $$0) {
+      return new fm.c($$0);
    }
 
-   public static <T> fm.c<T> a(CommandContext<ej> $$0, String $$1, alh<js<T>> $$2) throws CommandSyntaxException {
-      fm.c<?> $$3 = (fm.c<?>)$$0.getArgument($$1, fm.c.class);
-      Optional<fm.c<T>> $$4 = $$3.a($$2);
-      return $$4.orElseThrow(() -> (CommandSyntaxException)$$3.a().map($$1xx -> {
-            alh<?> $$2x = $$1xx.h();
-            return fi.b.create($$2x.a(), $$2x.b(), $$2.a());
-         }, $$1xx -> {
-            axt<?> $$2x = $$1xx.h();
-            return c.create($$2x.b(), $$2x.a(), $$2.a());
-         }));
+   public static jg<fao> a(CommandContext<ek> $$0, String $$1) throws CommandSyntaxException {
+      return d($$0, $$1);
    }
 
-   public fm.c<T> a(StringReader $$0) throws CommandSyntaxException {
-      if ($$0.canRead() && $$0.peek() == '#') {
-         int $$1 = $$0.getCursor();
+   public static fm.a b(eg $$0) {
+      return new fm.a($$0);
+   }
 
-         try {
-            $$0.skip();
-            ali $$2 = ali.a($$0);
-            axt<T> $$3 = axt.a(this.e, $$2);
-            jj.c<T> $$4 = this.d.a($$3).orElseThrow(() -> b.createWithContext($$0, $$2, this.e.a()));
-            return new fm.d<>($$4);
-         } catch (CommandSyntaxException var6) {
-            $$0.setCursor($$1);
-            throw var6;
-         }
+   public static jg<fbx> b(CommandContext<ek> $$0, String $$1) {
+      return d($$0, $$1);
+   }
+
+   public static fm.b c(eg $$0) {
+      return new fm.b($$0);
+   }
+
+   public static jg<fds> c(CommandContext<ek> $$0, String $$1) {
+      return d($$0, $$1);
+   }
+
+   private static <T> jg<T> d(CommandContext<ek> $$0, String $$1) {
+      return (jg<T>)$$0.getArgument($$1, jg.class);
+   }
+
+   @Nullable
+   public jg<T> a(StringReader $$0) throws CommandSyntaxException {
+      ali<Object> $$1 = this.e.a(JavaOps.INSTANCE);
+      Dynamic<?> $$2 = a($$1, d, $$0);
+      return !this.f ? null : (jg)this.g.parse($$2).getOrThrow($$1x -> a.createWithContext($$0, $$1x));
+   }
+
+   @VisibleForTesting
+   static <T> Dynamic<T> a(DynamicOps<T> $$0, vb<T> $$1, StringReader $$2) throws CommandSyntaxException {
+      int $$3 = $$2.getCursor();
+      T $$4 = $$1.b($$2);
+      if (b($$2)) {
+         return new Dynamic($$0, $$4);
       } else {
-         ali $$6 = ali.a($$0);
-         alh<T> $$7 = alh.a(this.e, $$6);
-         jf.c<T> $$8 = this.d.a($$7).orElseThrow(() -> fi.a.createWithContext($$0, $$6, this.e.a()));
-         return new fm.b<>($$8);
+         $$2.setCursor($$3);
+         alk $$5 = alk.a($$2);
+         if (b($$2)) {
+            return new Dynamic($$0, $$0.createString($$5.toString()));
+         } else {
+            $$2.setCursor($$3);
+            throw c.createWithContext($$2);
+         }
       }
    }
 
-   public <S> CompletableFuture<Suggestions> listSuggestions(CommandContext<S> $$0, SuggestionsBuilder $$1) {
-      eo.a(this.d.f().map(axt::b), $$1, "#");
-      return eo.a(this.d.c_().map(alh::a), $$1);
+   private static boolean b(StringReader $$0) {
+      return !$$0.canRead() || $$0.peek() == ' ';
    }
 
    public Collection<String> getExamples() {
-      return a;
+      return b;
    }
 
-   public static class a<T> implements ig<fm<T>, fm.a<T>.a> {
-      public void a(fm.a<T>.a $$0, vw $$1) {
-         $$1.b($$0.b);
-      }
-
-      public fm.a<T>.a a(vw $$0) {
-         return new fm.a.a($$0.r());
-      }
-
-      public void a(fm.a<T>.a $$0, JsonObject $$1) {
-         $$1.addProperty("registry", $$0.b.a().toString());
-      }
-
-      public fm.a<T>.a a(fm<T> $$0) {
-         return new fm.a.a($$0.e);
-      }
-
-      public final class a implements ig.a<fm<T>> {
-         final alh<? extends js<T>> b;
-
-         a(final alh<? extends js<T>> $$1) {
-            this.b = $$1;
-         }
-
-         public fm<T> a(ef $$0) {
-            return new fm<>($$0, this.b);
-         }
-
-         @Override
-         public ig<fm<T>, ?> a() {
-            return a.this;
-         }
+   public static class a extends fm<fbx> {
+      protected a(eg $$0) {
+         super($$0, mi.bs, fbz.d);
       }
    }
 
-   static record b<T>(jf.c<T> a) implements fm.c<T> {
-      @Override
-      public Either<jf.c<T>, jj.c<T>> a() {
-         return Either.left(this.a);
-      }
-
-      @Override
-      public <E> Optional<fm.c<E>> a(alh<? extends js<E>> $$0) {
-         return this.a.h().c($$0) ? Optional.of((fm.c<E>)this) : Optional.empty();
-      }
-
-      public boolean a(jf<T> $$0) {
-         return $$0.equals(this.a);
-      }
-
-      @Override
-      public String b() {
-         return this.a.h().a().toString();
-      }
-
-      public jf.c<T> c() {
-         return this.a;
+   public static class b extends fm<fds> {
+      protected b(eg $$0) {
+         super($$0, mi.bt, fds.f);
       }
    }
 
-   public interface c<T> extends Predicate<jf<T>> {
-      Either<jf.c<T>, jj.c<T>> a();
-
-      <E> Optional<fm.c<E>> a(alh<? extends js<E>> var1);
-
-      String b();
-   }
-
-   static record d<T>(jj.c<T> a) implements fm.c<T> {
-      @Override
-      public Either<jf.c<T>, jj.c<T>> a() {
-         return Either.right(this.a);
-      }
-
-      @Override
-      public <E> Optional<fm.c<E>> a(alh<? extends js<E>> $$0) {
-         return this.a.h().d($$0) ? Optional.of((fm.c<E>)this) : Optional.empty();
-      }
-
-      public boolean a(jf<T> $$0) {
-         return this.a.a($$0);
-      }
-
-      @Override
-      public String b() {
-         return "#" + this.a.h().b();
-      }
-
-      public jj.c<T> c() {
-         return this.a;
+   public static class c extends fm<fao> {
+      protected c(eg $$0) {
+         super($$0, mi.br, fao.e);
       }
    }
 }
