@@ -5,34 +5,37 @@ import com.mojang.brigadier.exceptions.CommandSyntaxException;
 import com.mojang.brigadier.exceptions.DynamicCommandExceptionType;
 import com.mojang.brigadier.suggestion.Suggestions;
 import com.mojang.brigadier.suggestion.SuggestionsBuilder;
+import java.util.Arrays;
 import java.util.Collection;
-import java.util.List;
 import java.util.concurrent.CompletableFuture;
 
-public class ft implements ArgumentType<cxo> {
-   private static final Collection<String> a = List.of("container.*", "container.5", "weapon");
-   private static final DynamicCommandExceptionType b = new DynamicCommandExceptionType($$0 -> xa.b("slot.unknown", $$0));
+public class ft implements ArgumentType<Integer> {
+   private static final Collection<String> a = Arrays.asList("container.5", "weapon");
+   private static final DynamicCommandExceptionType b = new DynamicCommandExceptionType($$0 -> xc.b("slot.unknown", $$0));
+   private static final DynamicCommandExceptionType c = new DynamicCommandExceptionType($$0 -> xc.b("slot.only_single_allowed", $$0));
 
    public static ft a() {
       return new ft();
    }
 
-   public static cxo a(CommandContext<ej> $$0, String $$1) {
-      return (cxo)$$0.getArgument($$1, cxo.class);
+   public static int a(CommandContext<ek> $$0, String $$1) {
+      return (Integer)$$0.getArgument($$1, Integer.class);
    }
 
-   public cxo a(StringReader $$0) throws CommandSyntaxException {
-      String $$1 = en.a($$0, $$0x -> $$0x != ' ');
-      cxo $$2 = cxp.a($$1);
+   public Integer a(StringReader $$0) throws CommandSyntaxException {
+      String $$1 = eo.a($$0, $$0x -> $$0x != ' ');
+      cxq $$2 = cxr.a($$1);
       if ($$2 == null) {
          throw b.createWithContext($$0, $$1);
+      } else if ($$2.b() != 1) {
+         throw c.createWithContext($$0, $$1);
       } else {
-         return $$2;
+         return $$2.a().getInt(0);
       }
    }
 
    public <S> CompletableFuture<Suggestions> listSuggestions(CommandContext<S> $$0, SuggestionsBuilder $$1) {
-      return eo.b(cxp.a(), $$1);
+      return ep.b(cxr.b(), $$1);
    }
 
    public Collection<String> getExamples() {
