@@ -1,19 +1,172 @@
-import com.google.common.collect.ImmutableList;
+import java.util.List;
 
 public class rh {
-   public static final alh<ejv<?, ?>> a = ri.a("end_platform");
-   public static final alh<ejv<?, ?>> b = ri.a("end_spike");
-   public static final alh<ejv<?, ?>> c = ri.a("end_gateway_return");
-   public static final alh<ejv<?, ?>> d = ri.a("end_gateway_delayed");
-   public static final alh<ejv<?, ?>> e = ri.a("chorus_plant");
-   public static final alh<ejv<?, ?>> f = ri.a("end_island");
+   public static final alj<ejx<?, ?>> a = rj.a("monster_room");
+   public static final alj<ejx<?, ?>> b = rj.a("fossil_coal");
+   public static final alj<ejx<?, ?>> c = rj.a("fossil_diamonds");
+   public static final alj<ejx<?, ?>> d = rj.a("dripstone_cluster");
+   public static final alj<ejx<?, ?>> e = rj.a("large_dripstone");
+   public static final alj<ejx<?, ?>> f = rj.a("pointed_dripstone");
+   public static final alj<ejx<?, ?>> g = rj.a("underwater_magma");
+   public static final alj<ejx<?, ?>> h = rj.a("glow_lichen");
+   public static final alj<ejx<?, ?>> i = rj.a("rooted_azalea_tree");
+   public static final alj<ejx<?, ?>> j = rj.a("cave_vine");
+   public static final alj<ejx<?, ?>> k = rj.a("cave_vine_in_moss");
+   public static final alj<ejx<?, ?>> l = rj.a("moss_vegetation");
+   public static final alj<ejx<?, ?>> m = rj.a("moss_patch");
+   public static final alj<ejx<?, ?>> n = rj.a("moss_patch_bonemeal");
+   public static final alj<ejx<?, ?>> o = rj.a("dripleaf");
+   public static final alj<ejx<?, ?>> p = rj.a("clay_with_dripleaves");
+   public static final alj<ejx<?, ?>> q = rj.a("clay_pool_with_dripleaves");
+   public static final alj<ejx<?, ?>> r = rj.a("lush_caves_clay");
+   public static final alj<ejx<?, ?>> s = rj.a("moss_patch_ceiling");
+   public static final alj<ejx<?, ?>> t = rj.a("spore_blossom");
+   public static final alj<ejx<?, ?>> u = rj.a("amethyst_geode");
+   public static final alj<ejx<?, ?>> v = rj.a("sculk_patch_deep_dark");
+   public static final alj<ejx<?, ?>> w = rj.a("sculk_patch_ancient_city");
+   public static final alj<ejx<?, ?>> x = rj.a("sculk_vein");
 
-   public static void a(qh<ejv<?, ?>> $$0) {
-      ri.a($$0, a, ekk.K);
-      ri.a($$0, b, ekk.L, new enj(false, ImmutableList.of(), null));
-      ri.a($$0, c, ekk.N, emn.a(ars.a, true));
-      ri.a($$0, d, ekk.N, emn.a());
-      ri.a($$0, e, ekk.m);
-      ri.a($$0, f, ekk.M);
+   private static jg<erh> a(jc $$0) {
+      return ry.a(
+         ekm.x,
+         new emh(
+            List.of(
+               emh.a(new buf(btd.<bty>b().a(bue.a(0, 4), 2).a(btv.a(0), 1).a()), eos.a(dng.to.m().b(ebw.T, $$0))),
+               emh.a(btv.a(1), eos.a(dng.tn.m().b(ebw.T, $$0)))
+            ),
+            jc.b,
+            eim.d,
+            true
+         )
+      );
+   }
+
+   private static jg<erh> a() {
+      return ry.a(
+         ekm.U,
+         new enj(
+            new epc(
+               btd.<ebg>b().a(dng.tp.m().b(dut.d, jc.f), 1).a(dng.tp.m().b(dut.d, jc.e), 1).a(dng.tp.m().b(dut.d, jc.c), 1).a(dng.tp.m().b(dut.d, jc.d), 1)
+            )
+         )
+      );
+   }
+
+   public static void a(qi<ejx<?, ?>> $$0) {
+      jh<ejx<?, ?>> $$1 = $$0.a(mi.aL);
+      jh<ewd> $$2 = $$0.a(mi.bc);
+      rj.a($$0, a, ekm.D);
+      List<alk> $$3 = List.of(
+         alk.b("fossil/spine_1"),
+         alk.b("fossil/spine_2"),
+         alk.b("fossil/spine_3"),
+         alk.b("fossil/spine_4"),
+         alk.b("fossil/skull_1"),
+         alk.b("fossil/skull_2"),
+         alk.b("fossil/skull_3"),
+         alk.b("fossil/skull_4")
+      );
+      List<alk> $$4 = List.of(
+         alk.b("fossil/spine_1_coal"),
+         alk.b("fossil/spine_2_coal"),
+         alk.b("fossil/spine_3_coal"),
+         alk.b("fossil/spine_4_coal"),
+         alk.b("fossil/skull_1_coal"),
+         alk.b("fossil/skull_2_coal"),
+         alk.b("fossil/skull_3_coal"),
+         alk.b("fossil/skull_4_coal")
+      );
+      jg<ewd> $$5 = $$2.b(qq.D);
+      rj.a($$0, b, ekm.q, new ekr($$3, $$4, $$5, $$2.b(qq.E), 4));
+      rj.a($$0, c, ekm.q, new ekr($$3, $$4, $$5, $$2.b(qq.F), 4));
+      rj.a($$0, d, ekm.al, new emo(12, bue.a(3, 6), bue.a(2, 8), 1, 3, bue.a(2, 4), bud.b(0.3F, 0.7F), bts.a(0.1F, 0.3F, 0.1F, 0.9F), 0.1F, 3, 8));
+      rj.a($$0, e, ekm.am, new emu(30, bue.a(3, 19), bud.b(0.4F, 2.0F), 0.33F, bud.b(0.3F, 0.9F), bud.b(0.4F, 1.0F), bud.b(0.0F, 0.3F), 4, 0.6F));
+      rj.a(
+         $$0,
+         f,
+         ekm.ai,
+         new enk(
+            jk.a(
+               ry.a(ekm.an, new ena(0.2F, 0.7F, 0.5F, 0.5F), era.a(jc.a, eim.c(), eim.d, 12), erm.a(btv.a(1))),
+               ry.a(ekm.an, new ena(0.2F, 0.7F, 0.5F, 0.5F), era.a(jc.b, eim.c(), eim.d, 12), erm.a(btv.a(-1)))
+            )
+         )
+      );
+      rj.a($$0, g, ekm.C, new enp(5, 1, 0.5F));
+      dsl $$6 = (dsl)dng.fy;
+      rj.a($$0, h, ekm.B, new emw($$6, 20, false, true, true, 0.5F, jk.a(dne::p, dng.b, dng.g, dng.e, dng.c, dng.tc, dng.rv, dng.rh, dng.tt)));
+      rj.a(
+         $$0,
+         i,
+         ekm.A,
+         new enh(
+            ry.a($$1.b(ro.z)),
+            3,
+            3,
+            axg.bz,
+            eos.a(dng.tr),
+            20,
+            100,
+            3,
+            2,
+            eos.a(dng.tq),
+            20,
+            2,
+            eim.a(eim.b(eim.c(List.of(dng.a, dng.nI, dng.nH)), eim.a(axg.ct)), eim.a(jc.a.q(), axg.cn))
+         )
+      );
+      epc $$7 = new epc(btd.<ebg>b().a(dng.te.m(), 4).a(dng.te.m().b(doc.r_, Boolean.valueOf(true)), 1));
+      eoy $$8 = new eoy(new epc(btd.<ebg>b().a(dng.td.m(), 4).a(dng.td.m().b(doc.r_, Boolean.valueOf(true)), 1)), dod.e, bue.a(23, 25));
+      rj.a(
+         $$0,
+         j,
+         ekm.x,
+         new emh(
+            List.of(emh.a(new buf(btd.<bty>b().a(bue.a(0, 19), 2).a(bue.a(0, 2), 3).a(bue.a(0, 6), 10).a()), $$7), emh.a(btv.a(1), $$8)), jc.a, eim.c, true
+         )
+      );
+      rj.a($$0, k, ekm.x, new emh(List.of(emh.a(new buf(btd.<bty>b().a(bue.a(0, 3), 5).a(bue.a(1, 7), 1).a()), $$7), emh.a(btv.a(1), $$8)), jc.a, eim.c, true));
+      rj.a($$0, l, ekm.U, new enj(new epc(btd.<ebg>b().a(dng.th.m(), 4).a(dng.tg.m(), 7).a(dng.ti.m(), 25).a(dng.bA.m(), 50).a(dng.jj.m(), 10))));
+      rj.a($$0, m, ekm.y, new enq(axg.bx, eos.a(dng.tm), ry.a($$1.b(l)), eqx.b, btv.a(1), 0.0F, 5, 0.8F, bue.a(4, 7), 0.3F));
+      rj.a($$0, n, ekm.y, new enq(axg.bx, eos.a(dng.tm), ry.a($$1.b(l)), eqx.b, btv.a(1), 0.0F, 5, 0.6F, bue.a(1, 2), 0.75F));
+      rj.a($$0, o, ekm.ai, new enk(jk.a(a(), a(jc.f), a(jc.e), a(jc.d), a(jc.c))));
+      rj.a($$0, p, ekm.y, new enq(axg.by, eos.a(dng.ei), ry.a($$1.b(o)), eqx.b, btv.a(3), 0.8F, 2, 0.05F, bue.a(4, 7), 0.7F));
+      rj.a($$0, q, ekm.z, new enq(axg.by, eos.a(dng.ei), ry.a($$1.b(o)), eqx.b, btv.a(3), 0.8F, 5, 0.1F, bue.a(4, 7), 0.7F));
+      rj.a($$0, r, ekm.aj, new enc(ry.a($$1.b(p)), ry.a($$1.b(q))));
+      rj.a($$0, s, ekm.y, new enq(axg.bx, eos.a(dng.tm), ry.a($$1.b(k)), eqx.a, bue.a(1, 2), 0.0F, 5, 0.08F, bue.a(4, 7), 0.3F));
+      rj.a($$0, t, ekm.U, new enj(eos.a(dng.tf)));
+      rj.a(
+         $$0,
+         u,
+         ekm.ak,
+         new ems(
+            new ehc(
+               eos.a(dng.a),
+               eos.a(dng.rb),
+               eos.a(dng.rc),
+               eos.a(dng.rv),
+               eos.a(dng.tO),
+               List.of(dng.rg.m(), dng.rf.m(), dng.re.m(), dng.rd.m()),
+               axg.bS,
+               axg.bU
+            ),
+            new ehe(1.7, 2.2, 3.2, 4.2),
+            new ehd(0.95, 2.0, 2),
+            0.35,
+            0.083,
+            true,
+            bue.a(4, 6),
+            bue.a(3, 4),
+            bue.a(1, 2),
+            -16,
+            16,
+            0.05,
+            1
+         )
+      );
+      rj.a($$0, v, ekm.ao, new eni(10, 32, 64, 0, 1, btv.a(0), 0.5F));
+      rj.a($$0, w, ekm.ao, new eni(10, 32, 64, 0, 1, bue.a(1, 3), 0.5F));
+      dsl $$9 = (dsl)dng.rB;
+      rj.a($$0, x, ekm.B, new emw($$9, 20, true, true, true, 1.0F, jk.a(dne::p, dng.b, dng.g, dng.e, dng.c, dng.tc, dng.rv, dng.rh, dng.tt)));
    }
 }
